# daily-miracles-app

./: .env.example  .gitattributes  .gitignore  .repopulse-test.txt  .vercelignore  AGENTS.md  ARCHITECTURE.md  AURORA-STATUS.md  AURORA5_UNIVERSE_BEST_SYSTEM.md  AURORA_STATUS.md  CLAUDE.md  CONTEXT_RULES.md  CRITICAL_START_HERE.md  DATABASE_SETUP.md  DECISIONS.md  DEPLOYMENT.md  DREAMTOWN_STATUS.md  Dockerfile.cron  ENV_CHECKLIST.md  FRONTEND_GUIDE.md  GUARDIAN.md  KPI.md  MVP-TEST-REPORT.md  MVP_SCOPE.md  ORCHESTRATOR-FIX-REPORT.md  README.md  RENDER_DEPLOY.md  RENDER_DEPLOYMENT.md  SYSTEM_STATUS_REPORT.md  TEST_GUIDE.md  TODAY-SUMMARY.md  WIX_INTEGRATION.md  analysis_result.json  analysis_result2.json  analysis_result3.json  beta-applications.json  cron-check.sh  feedback-submissions.json  how 9dcc3e0 --name-only  package-lock.json  (+26 more)
.claude/: AURORA_STATUS.md  COMI_REFERENCE_GUIDE.md  MASTER-CONTROL.md  TEAM_OPS_GUIDE.md  settings.json  settings.local.json
.github/: DREAMTOWN_CHECKLIST.md  FEATURE_CHECKLIST.md  TEST_GUIDE.md  pull_request_template.md
DreamTown/: README.md
aurora5/: API-GUIDE.md
claude/: MASTER-INDEX.md  SKILL.md  settings.local.json
config/: constants.js  database.js  expoConfig.js  featureFlags.js  inquiryForm.js  locationRegistry.js  logger.js  messageTemplates.js  modes.registry.json  modesLoader.js  planBTemplates.js  quotePriceData.js  silent-response-messages.json  videoPresets.js
configs/: dec-queries.json  open-links.json
database/: aurora5_schema.sql  db.js  dbConfig.js  migrate-005-points.js  migrate-006-daily-checks.js  migrate-008-nicepay.js  migrate-009-harbor.js  migrate-010-yeosu-ops.js  migrate-011-mice-report.js  migrate-013-wish-tracking.js  migrate-014-playground.js  migrate-015-templates.js  migrate-017-aurora5.js  migrate-018-wu-sessions.js  migrate-019-fix-total-wu-count.js  migrate-022-wish-image-filename.js  migrate.js  program_schema.sql  quote_schema.sql  render_migration.sql  run-aurora5-schema.js  run-deal-structuring-migration.js  run-events-schema.js  run-payment-migration.js  run-quote-schema.js  run-settlement-migration.js  run-storybook-schema.js  run-users-migration.js  run-yeosu-wish-schema.js  storybook_schema.sql  users_migration.sql  yeosu_migrate.js  yeosu_migration.sql  yeosu_wish_schema.sql
docs/: AURORA5_CHARACTER_PROMPTS.md  AURORA5_CHARACTER_PROMPTS_V3.md  CLAUDE_DESKTOP_MCP_CONFIG.md  CONSTITUTION.md  DECISIONS_LOG.md  DEPLOY-CHECKLIST-STAR-SYSTEM-v1.md  GROWTH-ROADMAP.md  JUDGE_PROMPTS.md  LAUNCH-DECLARATION.md  README.md  REVIEW_COLLECTION_SYSTEM.md  WIX_INTEGRATION_GUIDE.md  WIX_TEAM_PAGE_CONTENT.md  airtable-schema.md  airtable-wish-intake-schema.md  airtable-wishes-inbox-schema.md  manifest.json  프로젝트지식_수동정리_가이드.md
dreamtown-brain/: README.md
dreamtown-frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
experiments/: registry.json
frameworks/: README.md  hook-patterns.json  stick-principles.json  story-designer-templates.json  success-cases.json
inputs/: business_plan.txt
jobs/: dbHealthCheck.js  dreamtownVoyageJob.js  pointExpirationJob.js  referralQualificationJob.js
mcp-servers/: claude_desktop_config_template.json  requirements.txt
mcp-servers/business-ops-mcp/: README.md  pyproject.toml
mcp-servers/business-ops-mcp/src/business_ops/: __init__.py  server.py  tools.py
mcp-servers/ceo-checklist-mcp/: README.md  pyproject.toml
mcp-servers/ceo-checklist-mcp/src/ceo_checklist/: __init__.py  server.py  tools.py  utils.py
mcp-servers/dashboard-mcp/: README.md  pyproject.toml
mcp-servers/dashboard-mcp/src/dashboard/: __init__.py  server.py  tools.py  utils.py
mcp-servers/infra-monitor-mcp/: README.md  pyproject.toml
mcp-servers/infra-monitor-mcp/src/infra_monitor/: __init__.py  server.py  tools.py
mcp-servers/miracle-mcp/: README.md  pyproject.toml
mcp-servers/miracle-mcp/src/miracle/: __init__.py  server.py  tools.py
mcp-servers/storybook-mcp/: README.md  pyproject.toml
mcp-servers/storybook-mcp/src/storybook/: __init__.py  server.py  tools.py
mcp-servers/summarizer-mcp/: README.md  pyproject.toml
mcp-servers/summarizer-mcp/src/summarizer/: __init__.py  server.py  tools.py  utils.py
mcp-servers/wish-image-mcp/: README.md  pyproject.toml
mcp-servers/wish-image-mcp/src/wishimage/: __init__.py  server.py  tools.py
mcp-servers/wishmaker-hub-mcp/: README.md  pyproject.toml
mcp-servers/wishmaker-hub-mcp/src/wishmaker_hub/: __init__.py  server.py  tools.py
middleware/: alertCooldown.js  entitlement.js  errorHandler.js  gateMiddleware.js  requestId.js  retentionMiddleware.js
orchestrator/: QUICK_START.md  README.md  THANK_YOU_CLAUDE_CODE.md  index.js
prisma/: schema.prisma
profiles/: 2d_ghibli_webtoon.yaml  sora_cinematic.yaml
public/: beta.html  complete.html  daily-messages.html  daily-miracles-result-old.html  daily-miracles-result.html  daily-miracles.html  demo-live-counter.html  demo-share-card.html  demo-skill-frontend.html  dt-events-dashboard.html  dt-landing.html  dt-star-born.html  dt-upgrade.html  dt-wish.html  feedback.html  forgot-password.html  growth-film.html  index.html  itinerary-builder.html  itinerary-result.html  login.html  payment-success.html  points.html  privacy.html  program-fail.html  program-messages.html  program-success.html  program.html  promise.html  questions.html  quote.html  red-support.html  result.html  roadmap.html  share.html  signup.html  star-entry.html  star-unlock.html  star-view.html  storybook-share.html  (+15 more)
qa/: character_consistency_checklist.md
reports/: change-summary-2026-01-11.md  impact-map-2026-01-11.json  intel-report-2026-01-11.md  qa-gate-2026-01-11.md  stage1-yeosu_cablecar-lock.json  yeosu_cablecar-generation-report.md  yeosu_cafe-generation-report.md
repositories/: kpiRepository.js
routes/: adminAiCostRoutes.js  adminCablecarRoutes.js  adminDashboardRoutes.js  adminLocationRoutes.js  adminPartnerRoutes.js  adminPointRoutes.js  adminQRRoutes.js  adminResonanceRoutes.js  agentMetricsRoutes.js  agentRoutes.js  aiTriggerRoutes.js  (+106 more)
(+1593 files in other folders)
