[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "business-ops-mcp"
version = "0.1.0"
description = "MCP server for Business Operations - 비즈니스 운영 시스템"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Daily Miracles Team"}
]
keywords = ["mcp", "business", "revenue", "subscription", "daily-miracles", "aurora5"]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
business-ops-mcp = "business_ops.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/business_ops"]
