[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ceo-checklist-mcp"
version = "0.1.0"
description = "MCP server for CEO Checklist - 푸르미르 일일 체크리스트 시스템"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Daily Miracles Team"}
]
keywords = ["mcp", "checklist", "ceo", "daily-miracles", "aurora5"]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
ceo-checklist-mcp = "ceo_checklist.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ceo_checklist"]
