[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dashboard-mcp"
version = "0.1.0"
description = "MCP server for Dashboard - Aurora 5 통합 대시보드"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Daily Miracles Team"}
]
keywords = ["mcp", "dashboard", "monitoring", "daily-miracles", "aurora5"]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
dashboard-mcp = "dashboard.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]
