[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miracle-mcp"
version = "0.1.0"
description = "MCP server for Daily Miracles - 기적지수 계산 및 응원 메시지 생성"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Daily Miracles Team"}
]
keywords = ["mcp", "miracle", "ai", "claude", "daily-miracles"]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
miracle-mcp = "miracle.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/miracle"]
