[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "summarizer-mcp"
version = "0.1.0"
description = "MCP server for summarizing conversations and documents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Daily Miracles Team"}
]
keywords = ["mcp", "summarizer", "ai", "claude"]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
summarizer-mcp = "summarizer.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/summarizer"]
