[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wish-image-mcp"
version = "0.1.0"
description = "MCP server for wish visualization with DALL-E 3"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Daily Miracles Team"}
]
keywords = ["mcp", "wish", "dalle", "ai", "image", "visualization"]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
wish-image-mcp = "wishimage.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wishimage"]
