[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wishmaker-hub-mcp"
version = "0.1.0"
description = "MCP server for WishMaker Hub - 소원이 통합 관리 시스템"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Daily Miracles Team"}
]
keywords = ["mcp", "wishmaker", "ai", "claude", "daily-miracles", "aurora5"]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
wishmaker-hub-mcp = "wishmaker_hub.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wishmaker_hub"]
